--- a/.pipelines/1p-e2e.yml
+++ b/.pipelines/1p-e2e.yml
@@ -8,7 +8,7 @@ resources:
         - repository: 1P
           type: git
           name: IDDP/msal-javascript-1p
-          ref: master
+          ref: shared-build-pipeline
 
 jobs:
     - template: .pipelines/templates/e2e-test-template.yml@1P
