--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -31,7 +31,7 @@
     "bin"
   ],
   "engines": {
-    "node": "16 || 18 || 20"
+    "node": ">=16"
   },
   "scripts": {
     "compile": "node-gyp rebuild",
