--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -122,7 +122,7 @@ body:
     - type: textarea
       attributes:
           label: Reproduction Steps
-          description: "Please provide steps to reproduce or a link to a sample which demonstrates this behavior."
+          description: "Please provide steps to reproduce or a link to a sample which demonstrates this behavior. If there is no way to consistently reproduce this issue, it may be closed without comment."
           placeholder: |
               1.
               2.
