--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -87,11 +87,13 @@ body:
           label: MSAL Logs
           description: "Please provide [verbose or trace level log messages](https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-browser/docs/logging.md) from msal. Bug reports without verbose or trace MSAL logs will be closed without comment. Please look at our [Logging Guide](https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-browser/docs/logging.md) for instructions on how to collect MSAL logs."
 
-    - type: markdown
+    - type: checkboxes
       attributes:
           label: Network Trace (Preferrably Fiddler)
-          description: "Please send a [Fiddler trace](https://learn.microsoft.com/en-us/azure/azure-web-pubsub/howto-troubleshoot-network-trace) (strongly preferred) or .har file containing the relevant network requests and responses to msaljshelp@microsoft.com. Your are reponsible for properly sanitizing any network trace you send. **DO NOT post a network trace**, sanitized or not to this or any GitHub issue. GitHub issues without a corresponding network trace e-mail may be closed without comment."
-
+          description: "Please send a [Fiddler trace](https://learn.microsoft.com/en-us/azure/azure-web-pubsub/howto-troubleshoot-network-trace) (strongly preferred) or .har file containing the relevant network requests and responses to msaljshelp@microsoft.com. Your are reponsible for properly sanitizing any network trace you send. **DO NOT post a network trace**, sanitized or not to this or any GitHub issue. GitHub issues for which we don't receive a corresponding network trace e-mail in a reasonable timeframe may be closed without comment."
+          options:
+              - label: Sent
+              - label: Pending
     - type: textarea
       attributes:
           label: MSAL Configuration
