--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -54,7 +54,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "eslint-config-msal": "^0.0.0",
+    "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
