--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -66,7 +66,7 @@
     "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
     "@types/uuid": "^7.0.0",
-    "eslint-config-msal": "^0.0.0",
+    "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
     "jest": "^29.5.0",
     "prettier": "2.8.7",
     "rollup": "^3.20.1",
