--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -59,7 +59,7 @@
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
-    "eslint-config-msal": "^0.0.0",
+    "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
