--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -66,7 +66,7 @@
     "@rollup/plugin-typescript": "^11.1.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.3.1",
-    "eslint-config-msal": "file://../../shared-configs/eslint-config-msal",
+    "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
     "jest": "^29.5.0",
     "node-addon-api": "^6.1.0",
     "rollup": "^3.20.2",
