--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -86,7 +86,7 @@
     "@types/sinon": "^7.5.0",
     "dotenv": "^8.2.0",
     "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
-    "msal-test-utils": "file:../../shared-test-utils/msal-test-utils",
+    "msal-test-utils": "file:../../shared-test-utils",
     "fake-indexeddb": "^3.1.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
