--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -85,11 +85,11 @@
     "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
     "dotenv": "^8.2.0",
-    "eslint-config-msal": "^0.0.0",
-    "msal-test-utils": "^0.0.1",
+    "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
     "fake-indexeddb": "^3.1.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "msal-test-utils": "file:../../shared-test-utils",
     "prettier": "2.8.7",
     "rimraf": "^3.0.0",
     "rollup": "^3.14.0",
