--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -78,10 +78,10 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
-    "eslint-config-msal": "^0.0.0",
-    "msal-test-utils": "^0.0.1",
+    "eslint-config-msal": "file:../../shared-configs/eslint-config-msal",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
+    "msal-test-utils": "file:../../shared-test-utils",
     "prettier": "2.8.7",
     "rimraf": "^3.0.2",
     "rollup": "^3.14.0",
