--- a/extensions/samples/electron-webpack/package.json
+++ b/extensions/samples/electron-webpack/package.json
@@ -10,7 +10,7 @@
         "make": "electron-forge make",
         "publish": "electron-forge publish",
         "lint": "eslint --ext .ts,.tsx .",
-        "build:package": "cd ../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
+        "build:package": "npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node --workspace=@azure/msal-node-extensions",
         "start:build": "npm run build:package && npm start"
     },
     "keywords": [
@@ -53,8 +53,8 @@
         "typescript": "~4.5.4"
     },
     "dependencies": {
-        "@azure/msal-node": "^2.0.0-beta.0",
-        "@azure/msal-node-extensions": "^1.0.0-beta.0",
+        "@azure/msal-node": "^2.6.2",
+        "@azure/msal-node-extensions": "^1.0.10",
         "bootstrap": "^4.6.2",
         "electron-squirrel-startup": "^1.0.0"
     }
