--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@azure/msal-browser": "^3.7.1",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/wasm-node": "^4.9.6",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.0",
@@ -65,9 +66,11 @@
     "prettier": "2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^4.9.6",
     "ts-jest": "^29.1.0",
     "tslib": "^2.0.0",
     "typescript": "^4.9.5"
+  },
+  "overrides": {
+    "rollup": "@rollup/wasm-node@^4.9.2"
   }
 }
