--- a/.github/workflows/msal-react-e2e.yml
+++ b/.github/workflows/msal-react-e2e.yml
@@ -49,14 +49,14 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 18
+                  node-version: 20
                   cache: "npm"
 
             - name: Clean Install
               run: npm ci --workspace=samples/msal-react-samples/${{matrix.sample}}
 
             - name: React optional dependencies
-              run: npm install --no-save @rollup/rollup-linux-x64-gnu 
+              run: npm install --no-save @rollup/rollup-linux-x64-gnu @parcel/watcher-linux-x64-glibc
 
             - name: Build packages
               working-directory: lib/msal-react
