--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -16,7 +16,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/jest": "^29.5.0",
-        "e2e-test-utils": "^0.0.1",
+        "e2e-test-utils": "file:../../e2eTestUtils",
         "jest": "^29.5.0",
         "react-scripts": "5.0.1",
         "ts-jest": "^29.1.0"
