--- a/samples/msal-react-samples/nextjs-sample/package.json
+++ b/samples/msal-react-samples/nextjs-sample/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
-    "e2e-test-utils": "^0.0.1",
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0"
   }
