--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -14,6 +14,7 @@
         "react-router-dom": "^6.7.0"
     },
     "devDependencies": {
+        "@azure/msal-common": "^14.7.0",
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/jest": "^29.5.0",
         "e2e-test-utils": "file:../../e2eTestUtils",
