--- a/samples/msal-react-samples/gatsby-sample/package.json
+++ b/samples/msal-react-samples/gatsby-sample/package.json
@@ -10,6 +10,7 @@
     "start": "gatsby serve -p 3000",
     "serve": "gatsby serve",
     "test": "jest",
+    "test:ci": "npm run test -- --watchAll=false --reporters=default --reporters=jest-junit",
     "clean": "gatsby clean"
   },
   "dependencies": {
@@ -30,5 +31,10 @@
     "e2e-test-utils": "file:../../e2eTestUtils",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0"
-  }
+  },
+  "jest-junit": {
+    "suiteNameTemplate": "{filepath}",
+    "outputDirectory": ".",
+    "outputName": "test-results.xml"
+}
 }
