--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -19,6 +19,7 @@
         "@types/jest": "^29.5.0",
         "e2e-test-utils": "file:../../e2eTestUtils",
         "jest": "^29.5.0",
+        "jest-junit": "^16.0.0",
         "react-scripts": "5.0.1",
         "ts-jest": "^29.1.0"
     },
