--- a/samples/msal-react-samples/gatsby-sample/package.json
+++ b/samples/msal-react-samples/gatsby-sample/package.json
@@ -30,11 +30,12 @@
     "@types/jest": "^29.5.0",
     "e2e-test-utils": "file:../../e2eTestUtils",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
   },
   "jest-junit": {
     "suiteNameTemplate": "{filepath}",
     "outputDirectory": ".",
     "outputName": "test-results.xml"
-}
+  }
 }
