--- a/samples/msal-react-samples/nextjs-sample/package.json
+++ b/samples/msal-react-samples/nextjs-sample/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^29.5.2",
     "e2e-test-utils": "file:../../e2eTestUtils",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
   }
 }
