--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -41,6 +41,7 @@
     "e2e-test-utils": "file:../../e2eTestUtils",
     "env-cmd": "^10.1.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
   }
 }
