--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -45,6 +45,7 @@
         "@types/jest": "^29.5.0",
         "e2e-test-utils": "file:../../e2eTestUtils",
         "jest": "^29.5.0",
+        "jest-junit": "^16.0.0",
         "ts-jest": "^29.1.0"
     }
 }
