--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -28,7 +28,7 @@
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
-        "test:ci": "npm run test -- --watchAll=false --reporters=default --reporters=jest-junit",
+        "test:ci": "npm run test -- --watchAll=false --detectOpenHandles --forceExit --reporters=default --reporters=jest-junit",
         "build:package": "cd ../../../ && npm run build:all --workspace=lib/msal-react"
     },
     "browserslist": {
