--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -24,7 +24,7 @@
         "build": "react-scripts build",
         "build:package": "cd ../../../ && npm run build:all --workspace=lib/msal-react",
         "test": "jest",
-        "test:ci": "npm run test -- --watchAll=false --reporters=default --reporters=jest-junit",
+        "test:ci": "npm run test -- --watchAll=false --detectOpenHandles --forceExit --reporters=default --reporters=jest-junit",
         "eject": "react-scripts eject"
     },
     "browserslist": {
