--- a/samples/msal-react-samples/nextjs-sample/package.json
+++ b/samples/msal-react-samples/nextjs-sample/package.json
@@ -30,5 +30,10 @@
     "jest": "^29.5.0",
     "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
+  },
+  "jest-junit": {
+    "suiteNameTemplate": "Next.js Sample Tests",
+    "outputDirectory": ".",
+    "outputName": "test-results.xml"
   }
 }
