--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -43,5 +43,10 @@
     "jest": "^29.5.0",
     "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
+  },
+  "jest-junit": {
+    "suiteNameTemplate": "React-Router Tests",
+    "outputDirectory": ".",
+    "outputName": "test-results.xml"
   }
 }
