--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -47,5 +47,10 @@
         "jest": "^29.5.0",
         "jest-junit": "^16.0.0",
         "ts-jest": "^29.1.0"
-    }
+    },
+    "jest-junit": {
+        "suiteNameTemplate": "TypeScript Sample Tests",
+        "outputDirectory": ".",
+        "outputName": "test-results.xml"
+      }
 }
