--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^8.2.0",
         "eslint": "^7.8.1",
         "gh-pages": "^3.1.0",
+        "jest-junit": "^16.0.0",
         "npm-run-all": "^4.1.5",
         "prettier": "2.8.7",
         "rimraf": "^3.0.0",
