--- a/samples/msal-node-samples/auth-code-cli-app/package.json
+++ b/samples/msal-node-samples/auth-code-cli-app/package.json
@@ -21,6 +21,7 @@
         "@types/jest": "^29.5.8",
         "e2e-test-utils": "^0.0.1",
         "jest": "^29.7.0",
+        "jest-junit": "^16.0.0",
         "ts-jest": "^29.1.1"
     }
 }
