--- a/samples/msal-node-samples/b2c-user-flows/package.json
+++ b/samples/msal-node-samples/b2c-user-flows/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "e2e-test-utils": "^0.0.1",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
   }
 }
