--- a/samples/msal-node-samples/device-code/package.json
+++ b/samples/msal-node-samples/device-code/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^29.5.0",
     "e2e-test-utils": "^0.0.1",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0"
   }
 }
