--- a/samples/msal-angular-v3-samples/angular16-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/package.json
@@ -37,6 +37,7 @@
     "e2e-test-utils": "^0.0.1",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
