--- a/samples/msal-angular-v3-samples/angular-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular-standalone-sample/package.json
@@ -35,6 +35,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.0",
     "e2e-test-utils": "^0.0.1",
+    "htmlparser2": "^8.0.2",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
     "jest-junit": "^16.0.0",
