--- a/samples/e2eTestUtils/package.json
+++ b/samples/e2eTestUtils/package.json
@@ -7,16 +7,16 @@
     "dependencies": {
         "@azure/identity": "^3.1.2",
         "@azure/keyvault-secrets": "^4.3.0",
-        "dotenv": "^8.2.0",
         "axios": "^1.6.0",
+        "dotenv": "^8.2.0",
         "find-process": "^1.4.4"
     },
     "devDependencies": {
         "typescript": "^4.9.5"
     },
     "peerDependencies": {
+        "jest": "^29.5.0",
         "playwright-core": "^1.31.1",
-        "puppeteer": "^20.9.0",
-        "jest": "^29.5.0"
+        "puppeteer": "^20.9.0"
     }
 }
