--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -37,9 +37,11 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^20.2.5",
     "e2e-test-utils": "^0.0.1",
+    "htmlparser2": "^8.0.2",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "^7.0.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
