--- a/samples/msal-angular-v3-samples/angular16-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/package.json
@@ -35,8 +35,10 @@
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.0",
     "e2e-test-utils": "^0.0.1",
+    "htmlparser2": "^8.0.2",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
