--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -24,6 +24,7 @@
     "@types/morgan": "^1.9.0",
     "e2e-test-utils": "^0.0.1",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "jose": "^2.0.2",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
