--- a/.pipelines/nightly-build.yml
+++ b/.pipelines/nightly-build.yml
@@ -40,13 +40,13 @@ jobs:
             displayName: "Build Libraries"
             inputs:
                 command: "custom"
-                customCommand: "run build --workspace=lib/** --workspace=extensions/**"
+                customCommand: "run build --workspace=lib/** --workspace=extensions/msal-node-extensions"
 
           - task: Npm@1
             displayName: "Run tests"
             continueOnError: true
             inputs:
                 command: "custom"
-                customCommand: "run test --workspace=lib/** --workspace=extensions/**"
+                customCommand: "run test --workspace=lib/** --workspace=extensions/msal-node-extensions"
 
           - task: CodeQL3000Finalize@0
