--- a/samples/msal-node-samples/managed-identity/package.json
+++ b/samples/msal-node-samples/managed-identity/package.json
@@ -7,7 +7,8 @@
     "start:app": "npm run build && node build/index.js"
   },
   "dependencies": {
-    "@azure/msal-node": "2.6.5-alpha.0"
+    "@azure/msal-node": "2.6.5-alpha.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
