--- a/samples/msal-angular-v3-samples/angular17-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular17-sample-app/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.0",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -24,7 +25,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
-    "@azure/msal-angular": "^3.0.13",
+    "@azure/msal-angular": "^3.0.12",
     "@azure/msal-browser": "^3.10.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
