--- a/samples/msal-node-samples/Managed-Identity/Imds/package.json
+++ b/samples/msal-node-samples/Managed-Identity/Imds/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "managed-identity",
+  "name": "imds",
   "version": "1.0.0",
-  "description": "Managed Identity for Azure VM",
+  "description": "Managed Identity for Imds",
   "scripts": {
     "build": "npx tsc",
     "start:app": "npm run build && node build/index.js"
   },
   "dependencies": {
-    "@azure/msal-node": "2.6.5-alpha.0",
+    "@azure/msal-node": "^2.6.5-alpha.0",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
