--- a/samples/msal-node-samples/Managed-Identity/Imds/tsconfig.json
+++ b/samples/msal-node-samples/Managed-Identity/Imds/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
 
     /* Emit */
-    "outDir": "./dist",                                  /* Specify an output folder for all emitted files. */
+    "outDir": "dist",                                  /* Specify an output folder for all emitted files. */
 
     /* Interop Constraints */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
