--- a/.pipelines/1p-build.yml
+++ b/.pipelines/1p-build.yml
@@ -1,35 +1,49 @@
-trigger: none # Disable push triggers
-
-pr:
-    - dev
+variables:
+    CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
+    LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
+    DEBIAN_FRONTEND: noninteractive
+    ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/') }}:
+        sourceBranchName: ${{ replace(variables['Build.SourceBranch'], 'refs/heads/', '') }}
+    ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
+        sourceBranchName: ${{ replace(variables['System.PullRequest.SourceBranch'], 'refs/heads/', '') }}
 
 resources:
     repositories:
+        - repository: templates
+          type: git
+          name: OneBranch.Pipelines/GovernedTemplates
+          ref: refs/heads/main
         - repository: 1P
           type: git
           name: IDDP/msal-javascript-1p
-          ref: master
+          ref: OBP_PullRequest_hemoral_OJm2sw # TODO change to master
 
-jobs:
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-common
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-browser
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-browser-1p
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-node
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-react
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-angular
-    - template: .pipelines/templates/ci-template.yml@1P
-      parameters:
-          libName: msal-node-extensions
-          os: ["ubuntu", "windows", "macOs"]
+extends:
+    template: v2/OneBranch.NonOfficial.CrossPlat.yml@templates # https://aka.ms/obpipelines/templates
+    parameters:
+        globalSdl:
+            policheck:
+                break: true
+    jobs:
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-common
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-browser
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-browser-1p
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-node
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-react
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-angular
+        - template: .pipelines/templates/ci-template.yml@1P
+          parameters:
+              libName: msal-node-extensions
+              os: ["ubuntu", "windows", "macOs"]
