--- a/.pipelines/1p-build.yml
+++ b/.pipelines/1p-build.yml
@@ -1,6 +1,7 @@
 variables:
     CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
+    WindowsContainerImage: "onebranch.azurecr.io/windows/ltsc2019/vse2022:latest" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
     DEBIAN_FRONTEND: noninteractive
     ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/') }}:
         sourceBranchName: ${{ replace(variables['Build.SourceBranch'], 'refs/heads/', '') }}
@@ -51,4 +52,4 @@ extends:
                   - template: .pipelines/templates/ci-template.yml@1P
                     parameters:
                         libName: msal-node-extensions
-                        os: ["ubuntu", "windows", "macOs"]
+                        os: ["linux", "windows", "macOs"]
