--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "gh-pages": "^3.1.0",
         "jest-junit": "^16.0.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "2.8.7",
+        "prettier": "^3.2.5",
         "rimraf": "^3.0.0",
         "semver": "^7.3.4",
         "ts-node": "^8.10.2",
