--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -82,7 +82,7 @@
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
     "msal-test-utils": "file:../../shared-test-utils",
-    "prettier": "2.8.7",
+    "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
     "rollup": "^3.14.0",
     "shx": "^0.3.2",
