--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -29,8 +29,8 @@
     "e2e": "ng e2e",
     "prepack": "npm run build:all",
     "prepublishOnly": "echo Use npm run deploy && exit 1",
-    "format:check": "npx prettier --ignore-path .gitignore --check src",
-    "format:fix": "npx prettier --ignore-path .gitignore --write src"
+    "format:check": "prettier --ignore-path .gitignore --check src",
+    "format:fix": "prettier --ignore-path .gitignore --write src"
   },
   "typings": "./dist/azure-msal-angular.d.ts",
   "beachball": {
