--- a/samples/msal-angular-v3-samples/angular17-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular17-sample-app/package.json
@@ -25,10 +25,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
-    "@azure/msal-angular": "^3.0.12",
-    "@azure/msal-browser": "^3.10.0",
+    "@azure/msal-angular": "^3.0.4",
+    "@azure/msal-browser": "^3.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -39,6 +40,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
+    "e2e-test-utils": "^0.0.1",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
@@ -47,6 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-jest": "^29.1.0",
     "typescript": "~5.4.2"
   }
 }
