--- a/.pipelines/1p-build.yml
+++ b/.pipelines/1p-build.yml
@@ -40,6 +40,7 @@ extends:
                   - template: .pipelines/templates/ci-template.yml@1P
                     parameters:
                         libName: msal-browser-1p
+                        subdirectory: ""
                   - template: .pipelines/templates/ci-template.yml@1P
                     parameters:
                         libName: msal-node
@@ -52,4 +53,5 @@ extends:
                   - template: .pipelines/templates/ci-template.yml@1P
                     parameters:
                         libName: msal-node-extensions
+                        path: "extensions"
                         os: ["linux", "windows", "macOs"]
