Fix path parameter for 1p

--- a/.pipelines/1p-build.yml
+++ b/.pipelines/1p-build.yml
@@ -41,6 +41,7 @@ extends:
                     parameters:
                         libName: msal-browser-1p
                         subdirectory: ""
+                        paht: ""
                   - template: .pipelines/templates/ci-template.yml@1P
                     parameters:
                         libName: msal-node
