--- a/.pipelines/1p-build.yml
+++ b/.pipelines/1p-build.yml
@@ -41,7 +41,7 @@ extends:
                     parameters:
                         libName: msal-browser-1p
                         subdirectory: ""
-                        paht: ""
+                        path: ""
                   - template: .pipelines/templates/ci-template.yml@1P
                     parameters:
                         libName: msal-node
