Update with MSAL files

--- a/samples/msal-angular-v3-samples/angular17-standalone-sample/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular17-standalone-sample/tsconfig.json
@@ -2,16 +2,19 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true, // what is this
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
+    "downlevelIteration": true, // what is this
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
@@ -21,6 +24,17 @@
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
+      "@azure/msal-angular": [
+        "../../../node_modules/@azure/msal-angular/dist"
+      ]
+    },
+    "types": [
+      "jest"
     ]
   },
   "angularCompilerOptions": {
