Add angular17-standalone-sample to e2e workflow

--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -39,6 +39,7 @@ jobs:
         - 'angular16-sample-app'
         - 'angular-b2c-sample-app'
         - 'angular-standalone-sample'
+        - 'angular17-standalone-sample'
 
     name: ${{ matrix.sample }}
 
